# andela-bootcamp-aem3pi

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: commercial_agent_docs.md  finance_agent_docs.md  hr_agent_docs.md  tech_agent_docs.md
data/qdrant_db/: meta.json
data/qdrant_db/collection/commercial_agent/: storage.sqlite
data/qdrant_db/collection/finance_agent/: storage.sqlite
data/qdrant_db/collection/hr_agent/: storage.sqlite
data/qdrant_db/collection/tech_agent/: storage.sqlite
src/: multi_agent_system.ipynb
test_queries/: test_queries.json
