[project]
name = "andela-bootcamp-aem3pi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-openai>=1.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langfuse>=3.10.1",
    "langgraph>=1.0.3",
    "openai>=2.8.1",
    "qdrant-client>=1.16.0",
    "tiktoken>=0.12.0",
    "typing>=3.10.0.0",
]
